# poster

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  utils.rs
src/handlers/: load_messages.rs  login.rs  mod.rs  post_message.rs  register.rs
src/repositories/: message.rs  user.rs
static/: index.html  index.js
