[package]
name = "poster"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
actix-files = "0.6.2"
actix-identity = "0.5"
actix-session = { version = "0.7", features = ["cookie-session"] }
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
env_logger = "0.10.0"
log = "0.4.17"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 